--- a/Dashboard/src/App.css
+++ b/Dashboard/src/App.css
@@ -6,6 +6,8 @@
 
 body {
   width: 100vw;
+  background: #282E40;
+  color: #B4B4B5
 }
 
 .header {
@@ -14,6 +16,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-weight: bold;
+  color: #F19BA1;
 }
 
 .header p {
@@ -38,6 +42,7 @@ body {
   width: 180px;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 10px;
 }
 
 .content-box button {
